--- a/front_end/src/components/list.css
+++ b/front_end/src/components/list.css
@@ -123,3 +123,20 @@
   background-color: #a71d2a;
 }
 
+
+.btnn button {
+  background: linear-gradient(135deg, #666666, #333333);
+  color: #fff;
+  padding: 10px;
+  font-size: 13px;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.btnn button:hover {
+  background: linear-gradient(135deg, #333333, #666666);
+  transform: scale(1.05);
+} 
